<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:text="@string/time"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:text="Time" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:background="@drawable/divider" />

        <TimePicker
            android:id="@+id/edit_alarm_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:timePickerMode="spinner" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:text="@string/label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:text="Label" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:background="@drawable/divider" />

        <EditText
            android:id="@+id/edit_alarm_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/add_label_hint"
            android:inputType="textCapWords"
            android:maxLength="15"
            android:textColor="@color/secondary_text"
            android:textStyle="italic" />


        <CheckBox
            android:id="@+id/cb_notification_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_type" />

        <LinearLayout
            android:id="@+id/layout_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@string/message"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:background="@drawable/divider" />

            <EditText
                android:id="@+id/edit_alarm_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:hint="@string/add_message_hint"
                android:inputType="textCapWords"
                android:maxLength="15"
                android:textColor="@color/secondary_text"
                android:textStyle="italic" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:text="@string/days"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:text="Days" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:background="@drawable/divider" />

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@string/monday"
                app:layout_gravity="center_vertical|fill_horizontal"
                tools:text="Monday" />

            <CheckBox
                android:id="@+id/edit_alarm_mon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@string/tuesday"
                app:layout_gravity="center_vertical|fill_horizontal"
                tools:text="Tuesday" />

            <CheckBox
                android:id="@+id/edit_alarm_tues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@string/wednesday"
                app:layout_gravity="center_vertical|fill_horizontal"
                tools:text="Wednesday" />

            <CheckBox
                android:id="@+id/edit_alarm_wed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@string/thursday"
                app:layout_gravity="center_vertical|fill_horizontal"
                tools:text="Thursday" />

            <CheckBox
                android:id="@+id/edit_alarm_thurs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@string/friday"
                app:layout_gravity="center_vertical|fill_horizontal"
                tools:text="Friday" />

            <CheckBox
                android:id="@+id/edit_alarm_fri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@string/saturday"
                app:layout_gravity="center_vertical|fill_horizontal"
                tools:text="Saturday" />

            <CheckBox
                android:id="@+id/edit_alarm_sat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@string/sunday"
                app:layout_gravity="center_vertical|fill_horizontal"
                tools:text="Sunday" />

            <CheckBox
                android:id="@+id/edit_alarm_sun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical" />
        </androidx.gridlayout.widget.GridLayout>

    </LinearLayout>

</ScrollView>